--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^3.0.99",
     "@base-ui/react": "^1.2.0",
+    "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
+    "@prisma/extension-accelerate": "^3.0.1",
+    "ai": "^6.0.97",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "lucide-react": "^0.575.0",
+    "marked": "^15.0.0",
     "next": "16.1.6",
+    "npm": "^11.10.1",
     "prisma": "^7.4.1",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^4.8.0",
     "shadcn": "^3.8.5",
+    "streamdown": "^2.3.0",
     "tailwind-merge": "^3.5.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
